--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <h2>Dexterity Project</h2>
                 <div class="content">
                   <p>
-                    on going
+                    On Going
                   </p>
                 </div>
               </a>
