--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <img src="images/ULP.jpg" alt="" />
               </span>
               <a href="generic4.html">
-                <h2>Upper limb prosthetic</h2>
+                <h2>Upper limb prosthesis</h2>
                 <div class="content">
                   <p>
                     Modifying an open source prosthetic hand to fit a patient specific deformity
