--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
           <section class="tiles">
             <article class="style1">
               <span class="image">
-                <img src="images/SSPP.jpg" alt="" />
+                <img src="images/SSPP.jpg" alt="" 
+		     width="469" 
+     height="386" />
               </span>
               <a href="generic.html">
                 <h2>Image Processing</h2>
@@ -72,7 +74,8 @@
             </article>
             <article class="style2">
               <span class="image">
-                <img src="images/Bike.png" alt="" />
+                <img src="images/Bike.png" alt=""  width="469" 
+     height="386 />
               </span>
               <a href="generic2.html">
                 <h2>Triathlon Bike</h2>
@@ -85,7 +88,8 @@
             </article>
             <article class="style3">
               <span class="image">
-                <img src="images/PL.png" alt="" />
+                <img src="images/PL.png" alt=""  width="469" 
+     height="386/>
               </span>
               <a href="generic3.html">
                 <h2>Prosthetic Leg</h2>
@@ -98,7 +102,8 @@
             </article>
             <article class="style4">
               <span class="image">
-                <img src="images/ULP.jpg" alt="" />
+                <img src="images/ULP.jpg" alt=""  width="469" 
+     height="386/>
               </span>
               <a href="generic4.html">
                 <h2>Upper limb prosthesis</h2>
@@ -111,7 +116,8 @@
             </article>
             <article class="style5">
               <span class="image">
-                <img src="images/W.png" alt="" />
+                <img src="images/W.png" alt=""  width="469" 
+     height="386 />
               </span>
               <a href="generic5.html">
                 <h2>Special needs child walker</h2>
@@ -124,7 +130,8 @@
             </article>
             <article class="style6">
               <span class="image">
-                <img src="images/BL.png" alt="" />
+                <img src="images/BL.png" alt=""  width="469" 
+     height="386/>
               </span>
               <a href="generic6.html">
                 <h2>Logo Design</h2>
@@ -137,7 +144,8 @@
             </article>
             <article class="style2">
               <span class="image">
-                <img src="images/pic07.jpg" alt="" />
+                <img src="images/pic07.jpg" alt=""  width="469" 
+     height="386 />
               </span>
               <a href="">
                 <h2>Dexterity Project</h2>
@@ -150,7 +158,8 @@
             </article>
             <article class="style3">
               <span class="image">
-                <img src="images/pic08.jpg" alt="" />
+                <img src="images/pic08.jpg" alt=""  width="469" 
+     height="386 />
               </span>
               <a href="">
                 <h2>Generative design</h2>
