--- a/generic5.html
+++ b/generic5.html
@@ -48,7 +48,7 @@
       <div id="main">
         <div class="inner" style="overflow: hidden; display: inline-block;">
           <h1>Description</h1>
-          <span class="image"><img src="images/W1.jpg" alt="" 
+          <span class="image"><img src="images/W1.JPG" alt="" 
 		
 			/></span>
           <h2>What?</h2>
