--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                   <h2>Prosthetic Leg</h2>
                   <div class="content">
                     <p>
-                      Building a patient specific long distnace running prosthesis
+                      Building a patient specific long distance running prosthesis
                     </p>
                   </div>
                 </a>
@@ -179,6 +179,19 @@
               </span>
               <a href="">
                 <h2>Dexterity Project</h2>
+                <div class="content">
+                  <p>
+                    On Going
+                  </p>
+                </div>
+              </a>
+            </article>
+	    <article class="style3" style="min-width: 90%;">
+              <span class="image">
+                <img src="images/pic08.jpg" alt="" />
+              </span>
+              <a href="">
+                <h2>Generative design</h2>
                 <div class="content">
                   <p>
                     On Going
