--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@
           
             <article class="style3" style="min-width: 90%;">
               <span class="image">
-                <img src="images/pic08.jpg" alt="" />
+                <img src="images/irheo1.jpg" alt="" />
               </span>
               <a href="">
-                <h2>Generative design</h2>
+                <h2>Scientific App Development</h2>
                 <div class="content">
                   <p>
-                    On Going
+                    Rheological data analysis tool
                   </p>
                 </div>
               </a>
