--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               <span class="image">
                 <img src="images/irheo1.jpg" alt="" />
               </span>
-              <a href="">
+              <a href="generic7.html">
                 <h2>Scientific App Development</h2>
                 <div class="content">
                   <p>
