--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="assets/css/main.css" />
+	  <style>
+    body {
+      background-image: url('C:\Users\Yazan\Downloads\bg.jpg'); /* Replace 'path/to/your/background-image.jpg' with the actual path to your image */
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+  </style>
   <noscript>
     <link rel="stylesheet" href="assets/css/noscript.css" />
   </noscript>
