--- a/generic7.html
+++ b/generic7.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Scientific Application Design</title>
+    <title>Scientific Software Design</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
