--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <img src="images/irheo1.jpg" alt="" />
               </span>
               <a href="generic7.html">
-                <h2>Scientific App Development</h2>
+                <h2>Scientific Software Development</h2>
                 <div class="content">
                   <p>
                     Rheological data analysis tool
