--- a/generic7.html
+++ b/generic7.html
@@ -64,7 +64,7 @@
 		 <li>Discuss critical points with field expert </li>
 			<li>Assess necessary user interface interaction points </li>
 			<li>Program and refine code to viable processing</li>
-			<span class="Image"><img src="images/figureJPG.jpg" alt="" style="padding-top: 25px; padding-bottom: 25px;" />
+			<span class="Image"><img src="images/0715.png" alt="" style="padding-top: 25px; padding-bottom: 25px;" />
 			<h2>Result?</h2>
 			<li>Efficient data processor </li>
 			<li>Easy to use interface </li>
