--- a/generic7.html
+++ b/generic7.html
@@ -24,7 +24,7 @@
       <header id="header">
         <div class="inner">
           <!-- Logo -->
-          <span class="logo"> Scientific Application Design </span>
+          <span class="logo"> Scientific Software Design </span>
           </a>
 
           <!-- Nav -->
@@ -64,7 +64,7 @@
 		 <li>Discuss critical points with field expert </li>
 			<li>Assess necessary user interface interaction points </li>
 			<li>Program and refine code to viable processing</li>
-			<span class="Image"><img src="images/0715.png" alt="" style="padding-top: 25px; padding-bottom: 25px;" />
+			<span class="Image"><img src="images/figure.png" alt="" style="padding-top: 25px; padding-bottom: 25px;" />
 			<h2>Result?</h2>
 			<li>Efficient data processor </li>
 			<li>Easy to use interface </li>
