--- a/generic7.html
+++ b/generic7.html
@@ -53,22 +53,30 @@
 			/></span>
           <h2>What?</h2>
 			<p>
-            <li>Develop a data analysis App for atomic force microscopy</li>
+            		<li>Develop a data analysis App for atomic force microscopy</li>
 			<li>User friendly </li>
 			<li>Fast processing </li>
-      <li>Adaptable to experiment parameters </li>
-          </p>
+      			<li>Adaptable to experiment parameters </li>
+         		 </p>
+		
 			<span class="image"><img src="images/irheo2.jpg" alt="" style="padding-bottom: 50px;" />
          
-				<h2>How?</h2>
-		 <li>Discuss critical points with field expert </li>
+			</span>
+	   <h2>How?</h2>
+			<p>
+		 	<li>Discuss critical points with field expert </li>
 			<li>Assess necessary user interface interaction points </li>
 			<li>Program and refine code to viable processing</li>
-			<span class="image"><img src="images/figure.png" alt="" style="padding-top: 50px; padding-bottom: 50px;" />
+			</p>
+			/*<span class="image"><img src="images/irheo2.jpg" alt="" style="padding-bottom: 50px;" />*/
+			<span class="image"><img src="images/figure.png" alt="" style="padding-top: 50px;" />
+			</span>
 			<h2>Result?</h2>
+			<p>
 			<li>Efficient data processor </li>
 			<li>Easy to use interface </li>
 			<li>Automatic data filtering </li>
+			</p>
         </div>
       </div>
 
