--- a/generic7.html
+++ b/generic7.html
@@ -59,7 +59,7 @@
       			<li>Adaptable to experiment parameters </li>
          		 </p>
 		
-			<span class="image"><img src="images/irheo2.jpg" alt="" style="padding-bottom: 50px;" />
+			<span class="image"><img src="images/irheo2.jpg" alt=""  />
          
 			</span>
 	   <h2>How?</h2>
@@ -68,8 +68,7 @@
 			<li>Assess necessary user interface interaction points </li>
 			<li>Program and refine code to viable processing</li>
 			</p>
-			/*<span class="image"><img src="images/irheo2.jpg" alt="" style="padding-bottom: 50px;" />*/
-			<span class="image"><img src="images/figure.png" alt="" style="padding-top: 50px;" />
+			<span class="image"><img src="images/figure.png" alt=""  />
 			</span>
 			<h2>Result?</h2>
 			<p>
